<resources>
    <string name="lblCondition">Condition</string>
    <string name="lblConditionEnter">Enter Condition</string>
    <string name="btnAdd">Add</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>
    <string name="lblValue">Value</string>
    <string name="lblPriority">Priority</string>
    <string name="lblValueEnter">Enter Value</string>
    <string name="lblPriorityEnter">Enter Priority</string>
    <string name="btnStock">Stock Management</string>
    <string name="lblUserName">User Name</string>
    <string name="lblEnterUserName">Enter User Name</string>
    <string name="lblEnterPassword">Enter Password</string>
    <string name="lblPassword">Password</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnLogIn">Log In</string>
    <string name="btnProcessDonorReq">Process Donor Requests</string>
    <string name="noreqfound">No Requests Found</string>
    <string name="nousersfound">No Users Found</string>
    <string name="btnStat">Manage Statistical Info</string>
</resources>
