<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtCriteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCondition"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/mainTextMargin"
        android:layout_marginTop="@dimen/mainTextMargin"
        />

    <TextView
        android:id="@+id/txtValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblValue"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/mainTextMargin"
        android:layout_marginTop="@dimen/mainTextMargin"
        />

    <TextView
        android:id="@+id/txtPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblPriority"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/mainTextMargin"
        android:layout_marginTop="@dimen/mainTextMargin"
        />

</LinearLayout>